# MIMO

./: .env.example  .gitignore  README.md  mimo-tts-platform-prd.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b4a6d2f27f83_initial_tables.py
backend/app/: config.py  db.py  deps.py  main.py
backend/app/infra/: provider.py  storage.py  text_segmentation.py
backend/app/models/: __init__.py  audit_log.py  base.py  provider_call_log.py  tts_task.py  tts_task_segment.py  usage_stat.py  user.py  voice_clone_source.py  voice_profile.py
backend/app/routers/: metrics.py  tts.py  voice_profile.py
backend/app/schemas/: common.py  metrics.py  tts.py  voice_profile.py
backend/app/services/: audit_service.py  metrics_service.py  tts_service.py  voice_service.py
backend/app/tasks/: __init__.py  celery_app.py  tts_tasks.py
backend/tests/: conftest.py  test_mimo_integration.py  test_phase3.py  test_phase4.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
docs/: api.md  claude-handoff.md  cloud-deployment-github.md  cloud-deployment-huawei.md  cloud-deployment.md  commercialization-roadmap.md  deployment.md  development.md  github-upload.md  mimo-skill-optimization.md  voice-clone-workflow.md
frontend/: README.md  package-lock.json  package.json  server.mjs
frontend/src/app/: globals.css  layout.tsx
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts  localClones.ts  metrics.ts  tts.ts  userIdentity.ts  voice.ts
frontend/src/stores/: tts-store.ts
frontend/src/types/: index.ts
(+20 files in other folders)
